feat: SJRA-1110 & SJRA-1107 Occurrence Notes (Create & Get) (#1151)
