# cli/python/radiant_python/models/occurrence_note.py
@@ -1,0 +1,105 @@
+# coding: utf-8
+
+"""
+    Radiant API
+
+    This is the API for Radiant data platform.
+
+    The version of the OpenAPI document: 1.0
+    Generated by OpenAPI Generator (https://openapi-generator.tech)
+
+    Do not edit the class manually.
+"""  # noqa: E501
+
+
+from __future__ import annotations
+import pprint
+import re  # noqa: F401
+import json
+
+from pydantic import BaseModel, ConfigDict, StrictInt, StrictStr
+from typing import Any, ClassVar, Dict, List
+from typing import Optional, Set
+from typing_extensions import Self
+
+class OccurrenceNote(BaseModel):
+    """
+    OccurrenceNote
+    """ # noqa: E501
+    case_id: StrictInt
+    content: StrictStr
+    created_at: StrictStr
+    id: StrictStr
+    occurrence_id: StrictStr
+    seq_id: StrictInt
+    task_id: StrictInt
+    updated_at: StrictStr
+    user_id: StrictStr
+    user_name: StrictStr
+    __properties: ClassVar[List[str]] = ["case_id", "content", "created_at", "id", "occurrence_id", "seq_id", "task_id", "updated_at", "user_id", "user_name"]
+
+    model_config = ConfigDict(
+        populate_by_name=True,
+        validate_assignment=True,
+        protected_namespaces=(),
+    )
+
+
+    def to_str(self) -> str:
+        """Returns the string representation of the model using alias"""
+        return pprint.pformat(self.model_dump(by_alias=True))
+
+    def to_json(self) -> str:
+        """Returns the JSON representation of the model using alias"""
+        # TODO: pydantic v2: use .model_dump_json(by_alias=True, exclude_unset=True) instead
+        return json.dumps(self.to_dict())
+
+    @classmethod
+    def from_json(cls, json_str: str) -> Optional[Self]:
+        """Create an instance of OccurrenceNote from a JSON string"""
+        return cls.from_dict(json.loads(json_str))
+
+    def to_dict(self) -> Dict[str, Any]:
+        """Return the dictionary representation of the model using alias.
+
+        This has the following differences from calling pydantic's
+        `self.model_dump(by_alias=True)`:
+
+        * `None` is only added to the output dict for nullable fields that
+          were set at model initialization. Other fields with value `None`
+          are ignored.
+        """
+        excluded_fields: Set[str] = set([
+        ])
+
+        _dict = self.model_dump(
+            by_alias=True,
+            exclude=excluded_fields,
+            exclude_none=True,
+        )
+        return _dict
+
+    @classmethod
+    def from_dict(cls, obj: Optional[Dict[str, Any]]) -> Optional[Self]:
+        """Create an instance of OccurrenceNote from a dict"""
+        if obj is None:
+            return None
+
+        if not isinstance(obj, dict):
+            return cls.model_validate(obj)
+
+        _obj = cls.model_validate({
+            "case_id": obj.get("case_id"),
+            "content": obj.get("content"),
+            "created_at": obj.get("created_at"),
+            "id": obj.get("id"),
+            "occurrence_id": obj.get("occurrence_id"),
+            "seq_id": obj.get("seq_id"),
+            "task_id": obj.get("task_id"),
+            "updated_at": obj.get("updated_at"),
+            "user_id": obj.get("user_id"),
+            "user_name": obj.get("user_name")
+        })
+        return _obj
+
+
